fix : spacing between add to cart btn and qty

--- a/assets/css/unminified/compatibility/woocommerce/woocommerce-rtl.css
+++ b/assets/css/unminified/compatibility/woocommerce/woocommerce-rtl.css
@@ -1232,7 +1232,6 @@ p.demo_store[data-position="bottom"],
 }
 
 .woocommerce div.product form.cart {
-  margin: 0 0 1em;
   zoom: 1;
 }
 
@@ -1253,7 +1252,7 @@ p.demo_store[data-position="bottom"],
 
 .woocommerce div.product form.cart div.quantity {
   float: right;
-  margin: 0 0 0 1em;
+  margin: 0 0 1em 1em;
 }
 
 .woocommerce div.product form.cart table {
