--- a/sass/site/compatibility/woocommerce/woocommerce.scss
+++ b/sass/site/compatibility/woocommerce/woocommerce.scss
@@ -1035,7 +1035,6 @@ p.demo_store,
 		}
 
 		form.cart {
-			margin: 0 0 1em;
 
 			.ast-woo-single-cart-button-wrap{
 				display: flex;
@@ -1046,7 +1045,7 @@ p.demo_store,
 
 			div.quantity {
 				float: left;
-				margin: 0 1em 0 0;
+				margin: 0 1em 1em 0;
 			}
 
 			table {
